Fixing notification icon alignment

--- a/less/navbar-header.less
+++ b/less/navbar-header.less
@@ -42,12 +42,12 @@
       }
 
       .notification-icon-count {
-        display: block;
+        display: inline-block;
         height: 15px;
         width: 15px;
-        position: absolute;
-        right: -6px;
-        top: 12px;
+        position: relative;
+        right: 8px;
+        top: 6px;
         border-radius: 50%;
         background-color: #ce0000;
         color: #fff;
@@ -88,7 +88,7 @@
   }
 
   .infotip.bottom-right .arrow {
-    left: 90%;
+    left: 85%;
    }
 
    @media (max-width: 768px) {
